Fix pull request alignment

--- a/app/assets/stylesheets/pull_requests.css.scss
+++ b/app/assets/stylesheets/pull_requests.css.scss
@@ -1,4 +1,6 @@
 .pull_request {
+  @include clearfix;
+
   h4 {
     margin: 0;
     small {
